DTSCCI-381 Code clean up